Bug 278828 - Shaders disabled for limited GLSL
Summary: Shaders disabled for limited GLSL
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scene-opengl (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 287768 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-30 03:07 UTC by S. Christian Collins
Modified: 2011-11-29 21:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2011-07-30 03:07:23 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

After upgrading to KDE 4.7.0 from 4.6.5, the Invert desktop effect no longer activates when using the key combination.  I have tried using other keyboard combinations to no avail.

Reproducible: Always

Steps to Reproduce:
Try to activate the Invert desktop effect using the appropriate keyboard shortcut.

Actual Results:  
Nothing happens.

Expected Results:  
The screen or active app's colors should invert.

** My System **
OS: Kubuntu 11.04 64-bit w/ KDE 4.7.0
Motherboard: ASRock X58 Extreme3 (Intel X58 chipset)
CPU: Intel Core i7 (2.8 GHz quad-core)
RAM: 12GB DDR3
Video: Dell NVIDIA GeForce 7800 GTX w/ 256 MB RAM (PCI Express)
Sound Card #1: Sound Blaster Audigy 2 ZS Gold
Sound Card #2: Echo Gina3G
Linux Kernel: 2.6.38-10-generic
NVIDIA video driver: 275.09.07
Screen Resolution: 1280 x 960
Comment 1 Martin Flöser 2011-07-30 06:46:42 UTC
can you please ensure that you have shaders enabled? Just run kwin from a konsole and paste 
the debug output.
Comment 2 S. Christian Collins 2011-07-30 07:10:59 UTC
Here is my debug output from kwin:

OpenGL vendor string:                   NVIDIA Corporation
OpenGL renderer string:                 GeForce 7800 GTX/PCI/SSE2
OpenGL version string:                  2.1.2 NVIDIA 275.09.07
OpenGL shading language version string: 1.20 NVIDIA via Cg compiler
Driver:                                 NVIDIA
Driver version:                         275.9.7
GPU class:                              NV40/G70
OpenGL version:                         2.1.2
GLSL version:                           1.20
X server version:                       1.10.1
Linux kernel version:                   2.6.38
Direct rendering:                       yes
Requires strict binding:                no
GLSL shaders:                           limited
Texture NPOT support:                   yes
kwin(3520): Shaders are not supported
Comment 3 Martin Flöser 2011-07-30 07:15:01 UTC
> GLSL shaders:                           limited

We currently disable all GLSL shaders if the GPU only supports limited GLSL. I am sorry that at the moment there is no way to use the invert effect with your GPU.

I will try to add an environment variable to enforce GLSL even for limited GL.
Comment 4 S. Christian Collins 2011-07-30 14:57:51 UTC
An environment variable would be nice.  Thanks for all you do, Martin!  KDE has truly been a computing dream come true for me, even with the occasional glitch :)
Comment 5 Thomas Lübking 2011-11-28 17:42:56 UTC
*** Bug 287768 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Lübking 2011-11-29 20:29:49 UTC
Git commit d5d77e6424c4ee93b9ca500de41527375d67670e by Thomas Lübking.
Committed on 28/11/2011 at 19:58.
Pushed by luebking into branch 'master'.

deny glsl by limited NPOT, not GLSL

BUG: 278828
REVIEW: 103283

M  +1    -1    kwin/libkwineffects/kwinglutils.cpp

http://commits.kde.org/kde-workspace/d5d77e6424c4ee93b9ca500de41527375d67670e
Comment 7 Thomas Lübking 2011-11-29 21:30:39 UTC
Git commit 4ed511fb7dcc8f099414157a85a11fb2f4f94449 by Thomas Lübking.
Committed on 28/11/2011 at 19:58.
Pushed by luebking into branch 'KDE/4.7'.

deny glsl by limited NPOT, not GLSL

BUG: 278828
REVIEW: 103283
FIXED-IN:4.7.4
(cherry picked from commit d5d77e6424c4ee93b9ca500de41527375d67670e)

M  +1    -1    kwin/libkwineffects/kwinglutils.cpp

http://commits.kde.org/kde-workspace/4ed511fb7dcc8f099414157a85a11fb2f4f94449