deny glsl by limited NPOT, not GLSL

BUG: 278828
REVIEW: 103283